[project]
name = "whiteout-tools"
version = "0.1.0"
description = "Whiteout Survival utility tools"
readme = "README.md"
requires-python = ">=3.14"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]